--- a/frontend/style.css
+++ b/frontend/style.css
@@ -397,6 +397,10 @@ footer {
     margin: 1rem;
 }
 
+.order-info>div:first-child {
+    margin-top: 0;
+}
+
 .order-action {
     flex: 1 1 20rem;
     border: 0.1rem #c0c0c0 solid;
