--- a/frontend/style.css
+++ b/frontend/style.css
@@ -4,7 +4,7 @@
 
 html {
     font-size: 62.5%;
-    /*16px * 62.5% = -10px = 1rem*/
+    /* 16px * 62.5 = 10px = 1rem */
 }
 
 body {
@@ -27,7 +27,9 @@ button {
 }
 
 input,
-button {
+button,
+select,
+textarea {
     font: 1.6rem helvetica;
     padding: 1rem;
     border: 0.1rem #808080 solid;
@@ -80,7 +82,7 @@ button.primary {
 }
 
 .success {
-    color: #40f040;
+    color: #40c040;
 }
 
 .error {
@@ -116,8 +118,8 @@ header a:hover {
 }
 
 .brand a {
-    font-size: 3rem;
     font-weight: bold;
+    font-size: 3rem;
     padding-left: 1rem;
 }
 
@@ -135,7 +137,7 @@ footer {
 .products {
     display: flex;
     flex-wrap: wrap;
-    list-style: none;
+    list-style-type: none;
     padding: 0;
     margin: 0;
     justify-content: center;
@@ -192,15 +194,12 @@ footer {
     font-size: 1.4rem;
 }
 
-
-/*Product details*/
-
 .content {
     padding: 1rem;
 }
 
 
-/*Product Details*/
+/* Product Details */
 
 .details {
     display: flex;
@@ -247,7 +246,7 @@ footer {
 }
 
 
-/*Cart*/
+/* Cart */
 
 .cart {
     display: flex;
@@ -284,7 +283,7 @@ footer {
     max-height: 10rem;
 }
 
-.cart-list-contaier li:first-child {
+.cart-list-container li:first-child {
     align-items: flex-end;
 }
 
@@ -331,6 +330,7 @@ footer {
     width: 32rem;
     padding: 2rem;
     border: 0.1rem #c0c0c0 solid;
+    border-radius: 0.5rem;
     list-style-type: none;
 }
 
@@ -346,7 +346,7 @@ footer {
 }
 
 
-/*Checkout*/
+/* Checkout */
 
 .checkout-steps {
     display: flex;
@@ -366,9 +366,6 @@ footer {
     color: #f08000;
     border-top-color: #f08000;
 }
-
-
-/*Order*/
 
 
 /* Order */
@@ -442,7 +439,6 @@ footer {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: space-between;
 }
 
 .profile-info {
@@ -471,7 +467,7 @@ td {
 }
 
 
-/*Dashboard*/
+/* Dashboard */
 
 .dashboard {
     display: flex;
@@ -527,7 +523,7 @@ td {
 .summary-items {
     display: flex;
     justify-content: space-around;
-    list-style: none;
+    list-style-type: none;
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
@@ -569,6 +565,129 @@ td {
     justify-content: space-between;
 }
 
-.chart>div {
+.charts>div {
     flex: 1;
+}
+
+
+/* search */
+
+.search {
+    width: 40%;
+}
+
+form.search-form input[type='text'] {
+    float: left;
+    width: 80%;
+    border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+form.search-form button {
+    float: left;
+    width: 40px;
+    background: #f0c040;
+    border-left: none;
+    cursor: pointer;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+form.search-form button:hover {
+    background: #0b7dda;
+}
+
+
+/* Clear floats */
+
+form.search-form::after {
+    content: '';
+    clear: both;
+    display: table;
+}
+
+
+/* Aside */
+
+aside {
+    position: fixed;
+    width: 30rem;
+    background-color: #ffffff;
+    height: 100%;
+    z-index: 1;
+    transform: translateX(-30.1rem);
+    transition: all 0.5s;
+    border-right: 0.1rem #808080 solid;
+}
+
+aside.open {
+    transform: translateX(0);
+}
+
+.aside-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 0.5rem 1rem 2rem;
+    color: #808080;
+}
+
+.aside-close-button {
+    width: 3rem;
+    height: 3rem;
+    font-size: 2rem;
+    cursor: pointer;
+    padding: 0;
+}
+
+ul.categories {
+    padding: 0;
+}
+
+.categories>li {
+    list-style-type: none;
+}
+
+.categories>li>a {
+    display: flex;
+    padding: 1rem;
+    padding-left: 2rem;
+    justify-content: space-between;
+}
+
+.categories>li>a>span {
+    font-size: 1.4rem;
+    color: #808080;
+}
+
+.categories>li>a:hover span {
+    color: #444444;
+}
+
+.categories>li>a:hover {
+    background-color: #f0f0f0;
+    color: #444444;
+}
+
+.brand button {
+    font-size: 3rem;
+    padding: 0.5rem;
+    background: none;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+
+/* review */
+
+.review {
+    list-style-type: none;
+    padding: 0;
+}
+
+.review li {
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
 }
